Fixed uneven gap between columns in callout
- @gtrogers

--- a/assets/stylesheets/styles/format-success.css
+++ b/assets/stylesheets/styles/format-success.css
@@ -33,6 +33,7 @@
 .details-left {
     float: left;
     text-align: right;
+    min-width: 40px;
 }
 
 .details-right {
